--- a/public/styles.css
+++ b/public/styles.css
@@ -1100,7 +1100,7 @@ button.hero-updates-btn {
     height: 35vh;
   }
   #section-4 .section-4-text {
-    margin-top: 0;
+    margin-top: -60px;
   }
 
   #team-section {
